# zeststream-brand-voice

./: .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: voice-check.yml
.planning-follow-up/: peel-deferred-findings.md
.planning/brand-voice-cli/: 13-wave-g-dogfood.md
docs/: IS-IT-ACCRETIVE.md  methodology.md
examples/before-after/: hero-rewrite.md
examples/scripts/: peel_discover.py
journey/: 01-peel-discover.md  02-press-define.md  03-lock-validate.md  04-pour-activate.md  README.md
scripts/: analyze_corpus.py  bootstrap-client.sh  client-handoff.sh  gitleaks-pre-commit.sh  install.sh  test_rules.py
skills/brand-voice/: SKILL.md
skills/brand-voice/commands/: discover-brand.md  enforce-voice.md  score-route.md
skills/brand-voice/data/: capabilities-ground-truth.yaml
skills/brand-voice/references/: ALGORITHM.md  ANTI_PATTERNS.md  CONFIDENCE_SCORING.md  CORPUS_SIGNATURES.md  DISCOVER.md  (+2 more)
src/zeststream_voice/: README.md  __init__.py  __main__.py  _brands.py  cli.py  grounding.py  scorer.py  sdk.py
tests/: conftest.py  test_brand_loader.py  test_compare_audio.py  test_draft.py  test_grok_client.py  test_grounding.py  test_history.py  test_llm_client.py  test_peel.py  test_peel_block_3.py  test_peel_block_4.py  test_peel_block_5.py  test_peel_block_6.py  test_peel_block_7.py  test_peel_block_8.py  test_peel_block_9.py  test_reply.py  test_rewrite.py  test_score_audio.py  test_score_audio_hallucination.py  test_scorer_layer1.py
visual/: README.md  character-bible.md
(+57 files in other folders)
